# thunderbird-website

./: .docker-ignore  .dockerignore  .gitignore  .readthedocs.yaml  Dockerfile  I18N_RULES.md  README.md  README.zh-CN.md  apache.dockerfile  babel.cfg  build-site.py  build-start.py  build.py  build_calendar.py  builder.py  docker-compose.yml  faq.py  helper.py  messages.pot  preview-start-page.dockerfile  preview-website.dockerfile  product_details.py  pull-libs.py  pull-libs.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-image.txt  requirements-test.txt  requirements.txt  settings.py  setup.cfg  translate.py  website.dockerfile  wsgi.py
.aws/: start-page-task-definition.json  website-task-definition.json
.devcontainer/: devcontainer.json
.github/: bird-names.txt
af/: newsletter.lang
am/: download_button.lang
an/: main.lang  newsletter.lang
ar/: main.lang
as/: download_button.lang  main.lang
ast/: newsletter.lang
az/: main.lang  newsletter.lang
azz/: download_button.lang
be/: download_button.lang  main.lang  newsletter.lang
bn-BD/: download_button.lang
bn-IN/: main.lang  newsletter.lang
br/: download_button.lang  newsletter.lang
bs/: download_button.lang  newsletter.lang
ca/: download_button.lang  newsletter.lang
cs/: download_button.lang  newsletter.lang
cy/: download_button.lang
da/: main.lang  newsletter.lang
de/: download_button.lang  newsletter.lang
docker/: Dockerfile  docker-entrypoint.sh  preview_tb_vhosts.conf  requirements-container.txt
docs/: archived.md  conf.py  deployment.md  index.rst  (+7 more)
(+7230 files in other folders)
