[project]
name = "thunderbird-website"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "babel>=2.6.0",
    "docopt>=0.6.2",
    "feedparser>=5.2.1",
    "icalendar>=4.0.2",
    "jinja2>=2.10.1,<=3.1.6",
    "markdown==3.9",
    "markupsafe>=1.0",
    "packaging~=23.1",
    "polib>=1.1.0",
    "pymdown-extensions==10.20.1",
    "python-dateutil~=2.8.2",
    "pyyaml>=6.0.1",
    "requests~=2.32.4",
    "setuptools==78.1.1",
    "watchdog>=0.9.0",
    "webassets>=0.12.1",
    "webob>=1.7.3",
    "pytest~=7.3.1",
]

[dependency-groups]
dev = ["flake8>=3.7.7"]
image = ["pillow==12.1.1"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
package = false
